syntax = "proto3";

message Request {
  oneof payload {
    GetServerImplementationsRequest get_server_implementations_request = 1;
    GetVersionsRequest get_versions_request = 2;
    GetBuildsRequest get_builds_request = 3;
    CreateServerRequest create_server_request = 4;
    StartServerRequest start_server_request = 5;
    StopServerRequest stop_server_request = 6;
    KillServerRequest kill_server_request = 7;
    AttachTerminalRequest attach_terminal_request = 8;
    GetRunningServersRequest get_running_servers_request = 9;
    WaitServerReadyRequest wait_server_ready_request = 10;
    RestartServerRequest restart_server_request = 11;
    UpdateServerRequest update_server_request = 12;
    GetExtensionProvidersRequest get_extension_providers_request = 13;
    SearchExtensionRequest search_extension_request = 14;
    GetExtensionVersionsRequest get_extension_versions_request = 15;
    AddExtensionRequest add_extension_request = 16;
    GetExtensionIdByUrlRequest get_extension_id_by_url_request = 17;
  }
}

message Response {
  oneof payload {
    ErrorResponse error_response = 1;
    GetServerImplementationsResponse get_server_implementations_response = 2;
    GetVersionsResponse get_versions_response = 3;
    GetBuildsResponse get_builds_response = 4;
    GetRunningServersResponse get_running_servers_response = 5;
    UpdateServerResponse update_server_response = 6;
    GetExtensionProvidersResponse get_extension_providers_response = 7;
    SearchExtensionResponse search_extension_response = 8;
    GetExtensionVersionsResponse get_extension_versions_response = 9;
    AddExtensionResponse add_extension_response = 10;
    GetExtensionIdByUrlResponse get_extension_id_by_url_response = 11;
  }
}

message ErrorResponse {
  string message = 1;
}

message GetServerImplementationsRequest {
}

message GetServerImplementationsResponse {
  repeated string implementations = 1;
}

message GetVersionsRequest {
  string server_implementation = 1;
}

message GetVersionsResponse {
  repeated Version versions = 1;
}

message Version {
  string name = 1;
  bool is_stable = 2;
}

message GetBuildsRequest {
  string server_implementation = 1;
  string version = 2;
}

message GetBuildsResponse {
  repeated Build builds = 1;
}

message Build {
  string name = 1;
  bool is_stable = 2;
}

message CreateServerRequest {
  string server_dir = 1;
  string name = 2;
  string server_implementation = 3;
  string version = 4;
  string build = 5;
  ConnectionType connection = 6;
  optional string hostname = 7;
}

enum ConnectionType {
  DIRECT = 0;
  PROXY = 1;
}

message StartServerRequest {
  string server_dir = 1;
}

message StopServerRequest {
  string server_dir = 1;
}

message KillServerRequest {
  string server_dir = 1;
}

message AttachTerminalRequest {
  string server_dir = 1;
}

message TerminalInput {
  oneof input {
    bytes content = 1;
    TerminalSize resize = 2;
  }
}

message TerminalSize {
  uint32 cols = 1;
  uint32 rows = 2;
}

message TerminalOutput {
  bytes content = 1;
}

message GetRunningServersRequest {
}

message GetRunningServersResponse {
  repeated RunningServer servers = 1;
}

message RunningServer {
  string server_dir = 1;
  string name = 2;
  ServerStatus status = 3;
  uint64 uptime_seconds = 4;
  uint32 port = 5;
  optional uint32 player_count = 6;
  optional uint32 max_players = 7;
}

enum ServerStatus {
  STARTING = 0;
  READY = 1;
  STOPPING = 2;
  RESTARTING = 3;
}

message WaitServerReadyRequest {
  string server_dir = 1;
}

message RestartServerRequest {
  string server_dir = 1;
}

message UpdateServerRequest {
  string server_dir = 1;
  UpdateType update_type = 2;
}

enum UpdateType {
  STABLE = 0;
  LATEST = 1;
}

message UpdateServerResponse {
  bool updated = 1;
  optional string old_version = 2;
  optional string old_build = 3;
  optional string new_version = 4;
  optional string new_build = 5;
}

message GetExtensionProvidersRequest {
}

message GetExtensionProvidersResponse {
  repeated string providers = 1;
}

message SearchExtensionRequest {
  string provider = 1;
  ExtensionType type = 2;
  string server_version = 3;
  string query = 4;
  bool include_incompatible_versions = 5;
}

message SearchExtensionResponse {
  repeated ExtensionInfo extensions = 1;
}

message ExtensionInfo {
  string id = 1;
  string name = 2;
}

enum ExtensionType {
  MOD = 0;
  PLUGIN = 1;
}

message GetExtensionVersionsRequest {
  string provider = 1;
  ExtensionType type = 2;
  string server_version = 3;
  string extension_id = 4;
  bool include_incompatible_versions = 5;
}

message GetExtensionVersionsResponse {
  repeated ExtensionVersionInfo versions = 1;
}

message ExtensionVersionInfo {
  string id = 1;
  string version = 2;
  bool is_stable = 3;
}

message AddExtensionRequest {
  string server_dir = 1;
  string provider = 2;
  ExtensionType type = 3;
  string extension_id = 4;
  string extension_version_id = 5;
  bool allow_incompatible_versions = 6;
  bool auto_update = 7;
}

message AddExtensionResponse {
  repeated ExtensionInfo added_extensions = 1;
}

message GetExtensionIdByUrlRequest {
  string url = 1;
}

message GetExtensionIdByUrlResponse {
  string provider = 1;
  ExtensionType type = 2;
  string extension_id = 3;
}